--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#2563eb" />
     <meta
       name="description"
-      content="Generate RSA or EC keypairs and convert between JWK/JWKS and PEM"
+      content="Generate RSA or EC keypairs, convert between JWK/JWKS and PEM, verify JWTs, and validate certificates"
     />
-    <title>Key Wizard — JWK ⇄ PEM (RSA & EC)</title>
+    <link rel="icon" href="%PUBLIC_URL%/favicon.svg" type="image/svg+xml">
+    <link rel="alternate icon" href="%PUBLIC_URL%/favicon.ico">
+    <title>CryptoForge — Key & Certificate Toolkit</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
